--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "noEmit": true,
+    "noEmit": false,
+    // 原来是true
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
